Fixed toolbar behind tabs bug and adjust enemy stats table size

--- a/src/app/game/arena/enemy/enemy.component.scss
+++ b/src/app/game/arena/enemy/enemy.component.scss
@@ -26,13 +26,14 @@
   display: flex;
 
   .enemy-details {
-    flex-grow: 1;
     margin-right: 2rem;
   }
-
+  
   .enemy-image {
+    flex-grow: 1;
     height: 540px;
     overflow: hidden;
+    text-align: center;
   
     img {
       max-height: 100%;
